# medical-chatbot

app/backend/: .env.example  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  server.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 8d85b00ab61c_initial_migration.py  dc26b4cbb70c_initial_migration.py
app/backend/api/: __init__.py
app/backend/api/auth/: auth.py
app/backend/api/monitoring/: health.py
app/backend/api/users/: __init__.py  users.py
app/backend/crud/: auth.py  base.py  user.py
app/backend/database/: __init__.py  session.py
app/backend/database/mixins/: __init__.py  time_stamp.py
app/backend/dependencies/: authentication.py  factory.py
app/backend/middleware/: __init__.py  authentication.py  sqlalchemy.py
app/backend/models/: __init__.py  user.py
app/backend/schemas/: auth.py  token.py  user.py
app/backend/utils/: __init__.py  current_datetime.py  jwt_handler.py  password_handler.py
app/mobile/: README.md
app/web/: README.md  package.json
app/web/src/app/: globals.css  layout.tsx
app/web/src/app/(home)/: layout.tsx  page.tsx
app/web/src/app/legal/: layout.tsx
app/web/src/app/legal/privacy-policy/: page.tsx
app/web/src/app/legal/usage-policy/: page.tsx
app/web/src/lib/providers/: TanstackReactQueryProvider.tsx
app/web/src/modules/prompt-input/: README.md  SpecificPrompt.tsx  constants.ts  index.tsx
app/web/src/modules/sidebar/: ActionGroup.tsx  Footer.tsx  Header.tsx  PreviousChatGroup.tsx  constants.ts  index.tsx
