[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.3",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "pydantic>=2.11.4",
    "pydantic-extra-types>=2.10.4",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
