[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "bitsandbytes>=0.45.5",
    "cryptography>=44.0.3",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "pydantic>=2.11.4",
    "pydantic-extra-types>=2.10.4",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.40",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "icecream>=2.1.4",
    "ruff>=0.11.8",
]
